# NeedleDrop-For-Sonos

./: .gitignore  NeedleDrop User Guide.doc  NeedleDrop User Guide.md  copy_to_applications.sh  generate_icon.py  generate_menubar_icon.py  project.yml
NeedleDrop/: Info.plist
NeedleDrop.xcodeproj/: project.pbxproj
NeedleDrop/App/: AppState.swift  NeedleDropApp.swift
NeedleDrop/Database/: AppleMusicActionQueueRepository.swift  DatabaseManager.swift  DatabaseModels.swift
NeedleDrop/Models/: CustomStation.swift  Favorites.swift  Library.swift  NowPlaying.swift  Preset.swift  Schedule.swift  ScrobblerConfig.swift  Zone.swift
NeedleDrop/Services/: AlbumArtEnricher.swift  AppleMusicPlayCountService.swift  AppleMusicService.swift  CustomStationStore.swift  HomeStore.swift  OAuthCallbackServer.swift  PlaySessionManager.swift  PresetStore.swift  ScheduleClient.swift  ScrobbleTracker.swift  ScrobblerClient.swift  SpeakerStore.swift  SpotifyService.swift
_Deferred/: AppleMusicService.swift  BannerView.swift  Library.swift  MiniPlayerWindow.swift  OAuthCallbackServer.swift  Preset.swift  PresetEditorView.swift  PresetStore.swift  PresetsView.swift  ScrobbleFilters.swift  ScrobblerConfig.swift
scrobbler/: com.needledrop.scrobbler.plist  com.needledrop.scrobbler.plist.example  pyproject.toml
scrobbler/src/needledrop/: __init__.py  __main__.py  bonjour.py  cli.py  config.py  server.py
scrobbler/src/needledrop/database/: __init__.py  models.py  stats.py
scrobbler/src/needledrop/scrobbler/: lastfm.py
scrobbler/src/needledrop/sonos/: discovery.py  listener.py
(+45 files in other folders)
